--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,20 @@ packages = [{include = "django_asyncapi"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 django = ">= 3.2.0"
-asyncapi-container = "0.2.0"
+asyncapi-container = "0.3.1"
+attrs = "^23.2.0"
 
+
+[tool.poetry.group.docs.dependencies]
+sphinx = "^6.2.1"
+myst-parser = "^3.0.1"
+furo = "^2024.7.18"
+sphinx-autobuild = "^2024.4.16"
+autodoc-pydantic = "^2.2.0"
+sphinx-inline-tabs = "^2023.4.21"
+sphinx-copybutton = "^0.5.2"
+attr-utils = {extras = ["sphinx"], version = "^1.1.0"}
+docutils = "0.18.1"
 
 [build-system]
 requires = ["poetry-core"]
