--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "django-asyncapi"
-version = "0.1.1"
+version = "0.3.0"
 description = ""
 authors = ["Sergei Konik <s.konik.dev@gmail.com>"]
 readme = "README.md"
@@ -9,8 +9,8 @@ packages = [{include = "django_asyncapi"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 django = ">= 3.2.0"
-asyncapi-container = "0.3.1"
 attrs = "^23.2.0"
+asyncapi-container = "^0.4.0"
 
 
 [tool.poetry.group.docs.dependencies]
