--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ packages = [{include = "django_asyncapi"}]
 python = "^3.10"
 django = ">= 3.2.0"
 attrs = "^23.2.0"
-asyncapi-container = "^0.4.1"
+asyncapi-container = "0.4.2"
 
 
 [tool.poetry.group.docs.dependencies]
